[package]
name = "info"
version = "0.1.0"
edition = "2021"
authors = [ "Lut99" ]
description = "Provides a helper trait for [serde](https://serde.rs) types that makes working with them slightly nicer."
repository = "https://github.com/Lut99/info-rs"


[dependencies]
async-trait = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
tokio = { version = "1.33", default-features = false, features = ["fs","io-util"], optional = true }


[features]
"async-tokio" = [ "dep:async-trait", "dep:tokio" ]
"json" = [ "dep:serde_json" ]
"yaml" = [ "dep:serde_yaml" ]
